website/versioned_docs/version-1.2.3/tutorials/getting_started/index.mdx
---
title: Getting Started with Ax
sidebar_label: Getting Started with Ax
---

import LinkButtons from "@site/src/components/LinkButtons.jsx";
import CellOutput from "@site/src/components/CellOutput.jsx";
import {PlotlyFigure} from "@site/src/components/Plotting.jsx";

<LinkButtons
  githubUrl="https://github.com/facebook/ax/blob/main/tutorials/getting_started/getting_started.ipynb"
  colabUrl="https://colab.research.google.com/github/facebook/ax/blob/main/tutorials/getting_started/getting_started.ipynb"
/>

# Getting Started with Ax

Complex optimization problems where we wish to tune multiple parameters to improve
metric performance, but the inter-parameter interactions are not fully understood, are
common across various fields including machine learning, robotics, materials science,
and chemistry. This category of problem is known as "black-box" optimization. The
complexity of black-box optimization problems further increases if evaluations are
expensive to conduct, time-consuming, or noisy.

We can use Ax to efficiently conduct an experiment in which we "ask" for candidate
points to evaluate, "tell" Ax the results, and repeat. We'll uses Ax's `Client`, a tool
for managing the state of our experiment, and we'll learn how to define an optimization
problem, configure an experiment, run trials, analyze results, and persist the
experiment for later use using the `Client`.

Because Ax is a black box optimizer, we can use it to optimize any arbitrary function.
In this example we will minimize the
[Hartmann6 function](https://www.sfu.ca/~ssurjano/hart6.html), a complicated
6-dimensional function with multiple local minima. Hartmann6 is a challenging benchmark
for optimization algorithms commonly used in the global optimization literature -- it
tests the algorithm's ability to identify the true global minimum, rather than
mistakenly converging on a local minimum. Looking at its analytic form we can see that
it would be incredibly challenging to efficiently find the global minimum either by
manual trial-and-error or traditional design of experiments like grid-search or
random-search.

$$

f(\mathbf{x})=-\sum_{i=1}^4 \alpha_i \exp \left(-\sum_{j=1}^6 A_{i j}\left(x_j-P_{i j}\right)^2\right)

$$

### Learning Objectives

- Understand the basic concepts of black box optimization
- Learn how to define an optimization problem using Ax
- Configure and run an experiment using Ax's `Client`
- Analyze the results of the optimization

### Prerequisites

- Familiarity with Python and basic programming concepts
- Understanding of [adaptive experimentation](../../intro-to-ae.mdx) and
  [Bayesian optimization](../../intro-to-bo.mdx)

## Step 1: Import Necessary Modules

First, ensure you have all the necessary imports:

```python
import numpy as np
from ax.api.client import Client
from ax.api.configs import RangeParameterConfig
```

## Step 2: Initialize the Client

Create an instance of the `Client` to manage the state of your experiment.

```python
client = Client()
```

## Step 3: Configure the Experiment

The `Client` instance can be configured with a series of `Config`s that define how the
experiment will be run.

The Hartmann6 problem is usually evaluated on the hypercube $x_i \in (0, 1)$, so we will
define six identical `RangeParameterConfig`s with these bounds.

You may specify additional features like parameter constraints to further refine the
search space and parameter scaling to help navigate parameters with nonuniform effects.

```python
# Define six float parameters x1, x2, x3, ... for the Hartmann6 function, which is typically evaluated on the unit hypercube
parameters = [
    RangeParameterConfig(
        name="x1", parameter_type="float", bounds=(0, 1)
    ),
    RangeParameterConfig(
        name="x2", parameter_type="float", bounds=(0, 1)
    ),
    RangeParameterConfig(
        name="x3", parameter_type="float", bounds=(0, 1)
    ),
    RangeParameterConfig(
        name="x4", parameter_type="float", bounds=(0, 1)
    ),
    RangeParameterConfig(
        name="x5", parameter_type="float", bounds=(0, 1)
    ),
    RangeParameterConfig(
        name="x6", parameter_type="float", bounds=(0, 1)
    ),
]

client.configure_experiment(parameters=parameters)
```

## Step 4: Configure Optimization

Now, we must configure the objective for this optimization, which we do using
`Client.configure_optimization`. This method expects a string `objective`, an expression
containing either a single metric to maximize, a linear combination of metrics to
maximize, or a tuple of multiple metrics to jointly maximize. These expressions are
parsed using [SymPy](https://www.sympy.org/en/index.html). For example:

- `"score"` would direct Ax to maximize a metric named score
- `"-loss"` would direct Ax to Ax to minimize a metric named loss
- `"task_0 + 0.5 * task_1"` would direct Ax to maximize the sum of two task scores,
  downweighting task_1 by a factor of 0.5
- `"score, -flops"` would direct Ax to simultaneously maximize score while minimizing
  flops

See these recipes for more information on configuring
[objectives](../../recipes/multi-objective-optimization) and
[outcome constraints](../../recipes/outcome-constraints).

```python
metric_name = "hartmann6" # this name is used during the optimization loop in Step 5
objective = f"-{metric_name}" # minimization is specified by the negative sign

client.configure_optimization(objective=objective)
```

## Step 5: Run Trials

Here, we will configure the ask-tell loop.

We begin by defining the Hartmann6 function as written above. Remember, this is just an
example problem and any Python function can be substituted here.

```python
# Hartmann6 function
def hartmann6(x1, x2, x3, x4, x5, x6):
    alpha = np.array([1.0, 1.2, 3.0, 3.2])
    A = np.array([
        [10, 3, 17, 3.5, 1.7, 8],
        [0.05, 10, 17, 0.1, 8, 14],
        [3, 3.5, 1.7, 10, 17, 8],
        [17, 8, 0.05, 10, 0.1, 14]
    ])
    P = 10**-4 * np.array([
        [1312, 1696, 5569, 124, 8283, 5886],
        [2329, 4135, 8307, 3736, 1004, 9991],
        [2348, 1451, 3522, 2883, 3047, 6650],
        [4047, 8828, 8732, 5743, 1091, 381]
    ])

    outer = 0.0
    for i in range(4):
        inner = 0.0
        for j, x in enumerate([x1, x2, x3, x4, x5, x6]):
            inner += A[i, j] * (x - P[i, j])**2
        outer += alpha[i] * np.exp(-inner)
    return -outer

hartmann6(0.1, 0.45, 0.8, 0.25, 0.552, 1.0)
```

<CellOutput>
{
`np.float64(-0.4878737485613134)`
}
</CellOutput>

### Optimization Loop

We will iteratively call `client.get_next_trials` to "ask" Ax for a parameterization to
evaluate, then call `hartmann6` using those parameters, and finally "tell" Ax the result
using `client.complete_trial`.

This loop will run multiple trials to optimize the function.

```python
for _ in range(10): # Run 10 rounds of trials
    # We will request three trials at a time in this example
    trials = client.get_next_trials(max_trials=3)

    for trial_index, parameters in trials.items():
        x1 = parameters["x1"]
        x2 = parameters["x2"]
        x3 = parameters["x3"]
        x4 = parameters["x4"]
        x5 = parameters["x5"]
        x6 = parameters["x6"]

        result = hartmann6(x1, x2, x3, x4, x5, x6)

        # Set raw_data as a dictionary with metric names as keys and results as values
        raw_data = {metric_name: result}

        # Complete the trial with the result
        client.complete_trial(trial_index=trial_index, raw_data=raw_data)
```

<CellOutput>
{
`[INFO 02-19 18:53:26] ax.api.client: GenerationStrategy(name='Center+Sobol+MBM:fast', nodes=[CenterGenerationNode(next_node_name='Sobol'), GenerationNode(name='Sobol', generator_specs=[GeneratorSpec(generator_enum=Sobol, generator_key_override=None)], transition_criteria=[MinTrials(transition_to='MBM'), MinTrials(transition_to='MBM')], suggested_experiment_status=ExperimentStatus.INITIALIZATION), GenerationNode(name='MBM', generator_specs=[GeneratorSpec(generator_enum=BoTorch, generator_key_override=None)], transition_criteria=[], suggested_experiment_status=ExperimentStatus.OPTIMIZATION)]) chosen based on user input and problem structure.
[INFO 02-19 18:53:26] ax.api.client: Generated new trial 0 with parameters {'x1': 0.5, 'x2': 0.5, 'x3': 0.5, 'x4': 0.5, 'x5': 0.5, 'x6': 0.5} using GenerationNode CenterOfSearchSpace.
[INFO 02-19 18:53:26] ax.api.client: Generated new trial 1 with parameters {'x1': 0.128652, 'x2': 0.541056, 'x3': 0.06369, 'x4': 0.62077, 'x5': 0.211618, 'x6': 0.767162} using GenerationNode Sobol.
[INFO 02-19 18:53:26] ax.api.client: Generated new trial 2 with parameters {'x1': 0.978042, 'x2': 0.483609, 'x3': 0.861368, 'x4': 0.323122, 'x5': 0.791636, 'x6': 0.350086} using GenerationNode Sobol.
[INFO 02-19 18:53:26] ax.api.client: Trial 0 marked COMPLETED.
[INFO 02-19 18:53:26] ax.api.client: Trial 1 marked COMPLETED.
[INFO 02-19 18:53:26] ax.api.client: Trial 2 marked COMPLETED.
[INFO 02-19 18:53:26] ax.api.client: Generated new trial 3 with parameters {'x1': 0.517879, 'x2': 0.803203, 'x3': 0.467212, 'x4': 0.785296, 'x5': 0.717883, 'x6': 0.235837} using GenerationNode Sobol.
[INFO 02-19 18:53:26] ax.api.client: Generated new trial 4 with parameters {'x1': 0.367615, 'x2': 0.237579, 'x3': 0.731756, 'x4': 0.020935, 'x5': 0.293992, 'x6': 0.631413} using GenerationNode Sobol.
[WARNING 02-19 18:53:26] ax.api.client: 3 trials requested but only 2 could be generated.
[INFO 02-19 18:53:26] ax.api.client: Trial 3 marked COMPLETED.
[INFO 02-19 18:53:26] ax.api.client: Trial 4 marked COMPLETED.
[INFO 02-19 18:53:27] ax.api.client: Generated new trial 5 with parameters {'x1': 0.19366, 'x2': 0.092414, 'x3': 0.810872, 'x4': 0.0, 'x5': 0.130509, 'x6': 0.707882} using GenerationNode MBM.
[WARNING 02-19 18:53:27] ax.api.client: 3 trials requested but only 1 could be generated.
[INFO 02-19 18:53:27] ax.api.client: Trial 5 marked COMPLETED.
[INFO 02-19 18:53:29] ax.api.client: Generated new trial 6 with parameters {'x1': 0.210504, 'x2': 0.287415, 'x3': 0.69263, 'x4': 0.0, 'x5': 0.322039, 'x6': 0.448455} using GenerationNode MBM.
[INFO 02-19 18:53:29] ax.api.client: Generated new trial 7 with parameters {'x1': 0.529056, 'x2': 0.257451, 'x3': 0.63431, 'x4': 0.0, 'x5': 0.264467, 'x6': 0.867667} using GenerationNode MBM.
[INFO 02-19 18:53:29] ax.api.client: Generated new trial 8 with parameters {'x1': 0.481799, 'x2': 0.21509, 'x3': 0.908543, 'x4': 0.0, 'x5': 0.437159, 'x6': 0.432203} using GenerationNode MBM.
[INFO 02-19 18:53:29] ax.api.client: Trial 6 marked COMPLETED.
[INFO 02-19 18:53:29] ax.api.client: Trial 7 marked COMPLETED.
[INFO 02-19 18:53:29] ax.api.client: Trial 8 marked COMPLETED.
[INFO 02-19 18:53:30] ax.api.client: Generated new trial 9 with parameters {'x1': 0.445875, 'x2': 0.389948, 'x3': 0.727872, 'x4': 0.0, 'x5': 0.271803, 'x6': 0.82695} using GenerationNode MBM.
[INFO 02-19 18:53:30] ax.api.client: Generated new trial 10 with parameters {'x1': 0.505129, 'x2': 0.037275, 'x3': 0.718011, 'x4': 0.024533, 'x5': 0.310487, 'x6': 0.638169} using GenerationNode MBM.
[INFO 02-19 18:53:30] ax.api.client: Generated new trial 11 with parameters {'x1': 0.409348, 'x2': 0.245094, 'x3': 0.721978, 'x4': 0.339229, 'x5': 0.265224, 'x6': 0.7349} using GenerationNode MBM.
[INFO 02-19 18:53:30] ax.api.client: Trial 9 marked COMPLETED.
[INFO 02-19 18:53:30] ax.api.client: Trial 10 marked COMPLETED.
[INFO 02-19 18:53:30] ax.api.client: Trial 11 marked COMPLETED.
[INFO 02-19 18:53:32] ax.api.client: Generated new trial 12 with parameters {'x1': 0.349491, 'x2': 0.206157, 'x3': 0.869796, 'x4': 0.328579, 'x5': 0.258064, 'x6': 0.658068} using GenerationNode MBM.
[INFO 02-19 18:53:32] ax.api.client: Generated new trial 13 with parameters {'x1': 0.398494, 'x2': 0.624815, 'x3': 0.699291, 'x4': 0.323279, 'x5': 0.25471, 'x6': 0.418206} using GenerationNode MBM.
[INFO 02-19 18:53:32] ax.api.client: Generated new trial 14 with parameters {'x1': 0.347058, 'x2': 0.0, 'x3': 0.71637, 'x4': 0.322898, 'x5': 0.273556, 'x6': 1.0} using GenerationNode MBM.
[INFO 02-19 18:53:32] ax.api.client: Trial 12 marked COMPLETED.
[INFO 02-19 18:53:32] ax.api.client: Trial 13 marked COMPLETED.
[INFO 02-19 18:53:32] ax.api.client: Trial 14 marked COMPLETED.
[INFO 02-19 18:53:33] ax.api.client: Generated new trial 15 with parameters {'x1': 0.133371, 'x2': 0.305334, 'x3': 0.699273, 'x4': 0.354601, 'x5': 0.270086, 'x6': 0.730535} using GenerationNode MBM.
[INFO 02-19 18:53:33] ax.api.client: Generated new trial 16 with parameters {'x1': 0.666602, 'x2': 0.29958, 'x3': 0.727755, 'x4': 0.379369, 'x5': 0.239157, 'x6': 0.736691} using GenerationNode MBM.
[INFO 02-19 18:53:33] ax.api.client: Generated new trial 17 with parameters {'x1': 0.356725, 'x2': 0.16726, 'x3': 0.641583, 'x4': 0.380094, 'x5': 0.243631, 'x6': 0.675014} using GenerationNode MBM.
[INFO 02-19 18:53:33] ax.api.client: Trial 15 marked COMPLETED.
[INFO 02-19 18:53:33] ax.api.client: Trial 16 marked COMPLETED.
[INFO 02-19 18:53:33] ax.api.client: Trial 17 marked COMPLETED.
[INFO 02-19 18:53:35] ax.api.client: Generated new trial 18 with parameters {'x1': 0.239245, 'x2': 0.20183, 'x3': 0.650259, 'x4': 0.414238, 'x5': 0.274736, 'x6': 0.711983} using GenerationNode MBM.
[INFO 02-19 18:53:35] ax.api.client: Generated new trial 19 with parameters {'x1': 0.246559, 'x2': 0.520755, 'x3': 0.656122, 'x4': 0.417665, 'x5': 0.23764, 'x6': 0.723332} using GenerationNode MBM.
[INFO 02-19 18:53:35] ax.api.client: Generated new trial 20 with parameters {'x1': 0.216339, 'x2': 0.0, 'x3': 0.634917, 'x4': 0.365704, 'x5': 0.302918, 'x6': 0.703017} using GenerationNode MBM.
[INFO 02-19 18:53:35] ax.api.client: Trial 18 marked COMPLETED.
[INFO 02-19 18:53:35] ax.api.client: Trial 19 marked COMPLETED.
[INFO 02-19 18:53:35] ax.api.client: Trial 20 marked COMPLETED.
[INFO 02-19 18:53:36] ax.api.client: Generated new trial 21 with parameters {'x1': 0.150859, 'x2': 0.132621, 'x3': 0.639944, 'x4': 0.321992, 'x5': 0.418809, 'x6': 0.68509} using GenerationNode MBM.
[INFO 02-19 18:53:36] ax.api.client: Generated new trial 22 with parameters {'x1': 0.138777, 'x2': 0.107117, 'x3': 0.64841, 'x4': 0.346011, 'x5': 0.006562, 'x6': 0.691454} using GenerationNode MBM.
[INFO 02-19 18:53:36] ax.api.client: Generated new trial 23 with parameters {'x1': 0.171259, 'x2': 0.12411, 'x3': 0.663193, 'x4': 0.336007, 'x5': 0.735154, 'x6': 0.696989} using GenerationNode MBM.
[INFO 02-19 18:53:36] ax.api.client: Trial 21 marked COMPLETED.
[INFO 02-19 18:53:36] ax.api.client: Trial 22 marked COMPLETED.
[INFO 02-19 18:53:36] ax.api.client: Trial 23 marked COMPLETED.
[INFO 02-19 18:53:38] ax.api.client: Generated new trial 24 with parameters {'x1': 0.171949, 'x2': 0.151291, 'x3': 0.618446, 'x4': 0.315067, 'x5': 0.319209, 'x6': 0.682445} using GenerationNode MBM.
[INFO 02-19 18:53:38] ax.api.client: Generated new trial 25 with parameters {'x1': 0.159771, 'x2': 0.16049, 'x3': 0.526268, 'x4': 0.293393, 'x5': 0.316167, 'x6': 0.698279} using GenerationNode MBM.
[INFO 02-19 18:53:38] ax.api.client: Generated new trial 26 with parameters {'x1': 0.161627, 'x2': 0.128635, 'x3': 0.679222, 'x4': 0.34654, 'x5': 0.331194, 'x6': 0.673224} using GenerationNode MBM.
[INFO 02-19 18:53:38] ax.api.client: Trial 24 marked COMPLETED.
[INFO 02-19 18:53:38] ax.api.client: Trial 25 marked COMPLETED.
[INFO 02-19 18:53:38] ax.api.client: Trial 26 marked COMPLETED.`
}
</CellOutput>

## Step 6: Analyze Results

After running trials, you can analyze the results. Most commonly this means extracting
the parameterization from the best performing trial you conducted.

Hartmann6 has a known global minimum of $f(x*) = -3.322$ at
$x* = (0.201, 0.150, 0.477, 0.273, 0.312, 0.657)$. Ax is able to identify a point very
near to this true optimum **using just 30 evaluations.** This is possible due to the
sample-efficiency of [Bayesian optimization](../../intro-to-bo), the optimization method
we use under the hood in Ax.

```python
best_parameters, prediction, index, name = client.get_best_parameterization()
print("Best Parameters:", best_parameters)
print("Prediction (mean, variance):", prediction)
```

<CellOutput>
{
`Best Parameters: {'x1': 0.21633930649059813, 'x2': 0.0, 'x3': 0.6349168382684292, 'x4': 0.36570392022752296, 'x5': 0.30291781577726246, 'x6': 0.7030168979812241}
Prediction (mean, variance): {'hartmann6': (np.float64(-2.564338082055544), np.float64(0.0025799589964041925))}`
}
</CellOutput>

## Step 7: Compute Analyses

Ax can also produce a number of analyses to help interpret the results of the experiment
via `client.compute_analyses`. Users can manually select which analyses to run, or can
allow Ax to select which would be most relevant. In this case Ax selects the following:

- **Arm Effects Plots** show the metric value for each
  [arm](https://ax.dev/docs/next/glossary#arm) on the experiment. Ax produces one plot
  using values from its internal surrogate model (this can be helpful for seeing the
  true effect of an arm when evaluations are noisy) and another using the raw metric
  values as observed.
- **Summary** lists all trials generated along with their parameterizations,
  observations, and miscellaneous metadata
- **Sensitivity Analysis Plot** shows which parameters have the largest affect on the
  objective using
  [Sobol Indicies](https://en.wikipedia.org/wiki/Variance-based_sensitivity_analysis)
- **Slice Plot** shows how the model predicts a single parameter effects the objective
  along with a confidence interval
- **Contour Plot** shows how the model predicts a pair of parameters effects the
  objective as a 2D surface
- **Cross Validation** helps to visualize how well the surrogate model is able to
  predict out of sample points

```python
# display=True instructs Ax to sort then render the resulting analyses
cards = client.compute_analyses(display=True)
```

**Modeled Arm Effects on hartmann6**

Modeled effects on hartmann6. This plot visualizes predictions of the true metric
changes for each arm based on Ax's model. This is the expected delta you would expect if
you (re-)ran that arm. This plot helps in anticipating the outcomes and performance of
arms based on the model's predictions. Note, flat predictions across arms indicate that
the model predicts that there is no effect, meaning if you were to re-run the
experiment, the delta you would see would be small and fall within the confidence
interval indicated in the plot.



<PlotlyFigure data={require('./assets/plot_data/927a06bd-f128-402e-b5a9-5da61fe9365e.json')} />


**Observed Arm Effects on hartmann6**

Observed effects on hartmann6. This plot visualizes the effects from previously-run arms
on a specific metric, providing insights into their performance. This plot allows one to
compare and contrast the effectiveness of different arms, highlighting which
configurations have yielded the most favorable outcomes.



<PlotlyFigure data={require('./assets/plot_data/5b3f6bd5-6261-455b-a76d-13ea91462b39.json')} />


**Utility Progression**

Shows the best hartmann6 value achieved so far across completed trials (objective is to
minimize). The x-axis shows trace index, which counts completed or early-stopped trials
sequentially (1, 2, 3, ...). This differs from trial index, which may have gaps if some
trials failed or were abandoned. For example, if trials 0, 2, and 5 completed while
trials 1, 3, and 4 failed, the trace indices would be 1, 2, 3 corresponding to trial
indices 0, 2, 5. The y-axis shows cumulative best utility. Only improvements are
plotted, so flat segments indicate trials that didn't surpass the previous best.
Infeasible trials (violating outcome constraints) don't contribute to the improvements.



<PlotlyFigure data={require('./assets/plot_data/59f49b56-e182-4b8f-a640-c6531d865570.json')} />


**Best Trial for Experiment**

Displays the trial with the best objective value based on raw observations. This
reflects actual measured performance during execution. This trial achieved the optimal
objective value and represents the recommended configuration for your optimization goal.
Only considering COMPLETED trials.




|    |   trial_index |   arm_name | trial_status   | generation_node   |   hartmann6 |       x1 |      x2 |       x3 |       x4 |       x5 |       x6 |
|---:|--------------:|-----------:|:---------------|:------------------|------------:|---------:|--------:|---------:|---------:|---------:|---------:|
|  0 |            25 |       25_0 | COMPLETED      | MBM               |    -3.22363 | 0.159771 | 0.16049 | 0.526268 | 0.293393 | 0.316167 | 0.698279 |


**Summary for Experiment**

High-level summary of the `Trial`-s in this `Experiment`




|    |   trial_index |   arm_name | trial_status   | generation_node     |   hartmann6 |       x1 |       x2 |       x3 |       x4 |       x5 |       x6 |
|---:|--------------:|-----------:|:---------------|:--------------------|------------:|---------:|---------:|---------:|---------:|---------:|---------:|
|  0 |             0 |        0_0 | COMPLETED      | CenterOfSearchSpace |   -0.505315 | 0.5      | 0.5      | 0.5      | 0.5      | 0.5      | 0.5      |
|  1 |             1 |        1_0 | COMPLETED      | Sobol               |   -0.383675 | 0.128652 | 0.541056 | 0.06369  | 0.62077  | 0.211618 | 0.767162 |
|  2 |             2 |        2_0 | COMPLETED      | Sobol               |   -0.00251  | 0.978042 | 0.483609 | 0.861368 | 0.323122 | 0.791636 | 0.350086 |
|  3 |             3 |        3_0 | COMPLETED      | Sobol               |   -0.869754 | 0.517879 | 0.803203 | 0.467212 | 0.785296 | 0.717883 | 0.235837 |
|  4 |             4 |        4_0 | COMPLETED      | Sobol               |   -1.33159  | 0.367615 | 0.237579 | 0.731756 | 0.020935 | 0.293992 | 0.631413 |
|  5 |             5 |        5_0 | COMPLETED      | MBM                 |   -0.779616 | 0.19366  | 0.092414 | 0.810872 | 0        | 0.130509 | 0.707882 |
|  6 |             6 |        6_0 | COMPLETED      | MBM                 |   -1.0534   | 0.210504 | 0.287415 | 0.69263  | 0        | 0.322039 | 0.448455 |
|  7 |             7 |        7_0 | COMPLETED      | MBM                 |   -0.949924 | 0.529056 | 0.257451 | 0.63431  | 0        | 0.264467 | 0.867667 |
|  8 |             8 |        8_0 | COMPLETED      | MBM                 |   -0.33007  | 0.481799 | 0.21509  | 0.908543 | 0        | 0.437159 | 0.432203 |
|  9 |             9 |        9_0 | COMPLETED      | MBM                 |   -1.16569  | 0.445875 | 0.389948 | 0.727872 | 0        | 0.271803 | 0.82695  |
| 10 |            10 |       10_0 | COMPLETED      | MBM                 |   -1.03302  | 0.505129 | 0.037275 | 0.718011 | 0.024533 | 0.310487 | 0.638169 |
| 11 |            11 |       11_0 | COMPLETED      | MBM                 |   -2.23225  | 0.409348 | 0.245094 | 0.721978 | 0.339229 | 0.265224 | 0.7349   |
| 12 |            12 |       12_0 | COMPLETED      | MBM                 |   -1.87914  | 0.349491 | 0.206157 | 0.869796 | 0.328579 | 0.258064 | 0.658068 |
| 13 |            13 |       13_0 | COMPLETED      | MBM                 |   -0.782423 | 0.398494 | 0.624815 | 0.699291 | 0.323279 | 0.25471  | 0.418206 |
| 14 |            14 |       14_0 | COMPLETED      | MBM                 |   -1.02566  | 0.347058 | 0        | 0.71637  | 0.322898 | 0.273556 | 1        |
| 15 |            15 |       15_0 | COMPLETED      | MBM                 |   -2.41609  | 0.133371 | 0.305334 | 0.699273 | 0.354601 | 0.270086 | 0.730535 |
| 16 |            16 |       16_0 | COMPLETED      | MBM                 |   -1.31372  | 0.666602 | 0.29958  | 0.727755 | 0.379369 | 0.239157 | 0.736691 |
| 17 |            17 |       17_0 | COMPLETED      | MBM                 |   -2.38569  | 0.356725 | 0.16726  | 0.641583 | 0.380094 | 0.243631 | 0.675014 |
| 18 |            18 |       18_0 | COMPLETED      | MBM                 |   -2.4435   | 0.239245 | 0.20183  | 0.650259 | 0.414238 | 0.274736 | 0.711983 |
| 19 |            19 |       19_0 | COMPLETED      | MBM                 |   -1.52003  | 0.246559 | 0.520755 | 0.656122 | 0.417665 | 0.23764  | 0.723332 |
| 20 |            20 |       20_0 | COMPLETED      | MBM                 |   -2.5664   | 0.216339 | 0        | 0.634917 | 0.365704 | 0.302918 | 0.703017 |
| 21 |            21 |       21_0 | COMPLETED      | MBM                 |   -2.48739  | 0.150859 | 0.132621 | 0.639944 | 0.321992 | 0.418809 | 0.68509  |
| 22 |            22 |       22_0 | COMPLETED      | MBM                 |   -0.766127 | 0.138777 | 0.107117 | 0.64841  | 0.346011 | 0.006562 | 0.691454 |
| 23 |            23 |       23_0 | COMPLETED      | MBM                 |   -0.609689 | 0.171259 | 0.12411  | 0.663193 | 0.336007 | 0.735154 | 0.696989 |
| 24 |            24 |       24_0 | COMPLETED      | MBM                 |   -3.04136  | 0.171949 | 0.151291 | 0.618446 | 0.315067 | 0.319209 | 0.682445 |
| 25 |            25 |       25_0 | COMPLETED      | MBM                 |   -3.22363  | 0.159771 | 0.16049  | 0.526268 | 0.293393 | 0.316167 | 0.698279 |
| 26 |            26 |       26_0 | COMPLETED      | MBM                 |   -2.72176  | 0.161627 | 0.128635 | 0.679222 | 0.34654  | 0.331194 | 0.673224 |


**Sensitivity Analysis for hartmann6**

Understand how each parameter affects hartmann6 according to a second-order sensitivity
analysis.



<PlotlyFigure data={require('./assets/plot_data/60b83a6b-2b61-4c7b-bff2-ce03110c62b9.json')} />


**hartmann6 vs. x2**

The slice plot provides a one-dimensional view of predicted outcomes for hartmann6 as a
function of a single parameter, while keeping all other parameters fixed at their best
trial value (Arm 20_0). This visualization helps in understanding the sensitivity and
impact of changes in the selected parameter on the predicted metric outcomes.



<PlotlyFigure data={require('./assets/plot_data/4c60cc5c-ad1a-4e47-abfa-590f2c1f6e64.json')} />


**hartmann6 (Mean) vs. x4, x5**

The contour plot visualizes the predicted outcomes for hartmann6 across a
two-dimensional parameter space, with other parameters held fixed at their best trial
value (Arm 20_0). This plot helps in identifying regions of optimal performance and
understanding how changes in the selected parameters influence the predicted outcomes.
Contour lines represent levels of constant predicted values, providing insights into the
gradient and potential optima within the parameter space.



<PlotlyFigure data={require('./assets/plot_data/eeee80d8-1fbe-411b-8eb7-ee0eadb61e7b.json')} />


**hartmann6 (Mean) vs. x2, x5**

The contour plot visualizes the predicted outcomes for hartmann6 across a
two-dimensional parameter space, with other parameters held fixed at their best trial
value (Arm 20_0). This plot helps in identifying regions of optimal performance and
understanding how changes in the selected parameters influence the predicted outcomes.
Contour lines represent levels of constant predicted values, providing insights into the
gradient and potential optima within the parameter space.



<PlotlyFigure data={require('./assets/plot_data/b5ee9192-2cbf-489c-aaab-0691354e6f2c.json')} />


**Cross Validation for hartmann6**

The cross-validation plot displays the model fit for each metric in the experiment. It
employs a leave-one-out approach, where the model is trained on all data except one
sample, which is used for validation. The plot shows the predicted outcome for the
validation set on the y-axis against its actual value on the x-axis. Points that align
closely with the dotted diagonal line indicate a strong model fit, signifying accurate
predictions. Additionally, the plot includes 95% confidence intervals that provide
insight into the noise in observations and the uncertainty in model predictions. A
horizontal, flat line of predictions indicates that the model has not picked up on
sufficient signal in the data, and instead is just predicting the mean.



<PlotlyFigure data={require('./assets/plot_data/8c55a990-8f3d-442a-bff6-7a20c1ac6cc6.json')} />


**Generation Strategy Graph**

GenerationStrategy: Center+Sobol+MBM:fast

Visualize the structure of a GenerationStrategy as a directed graph. Each node
represents a GenerationNode in the strategy, and edges represent transitions between
nodes based on TransitionCriterion. Edge labels show the criterion class names that
trigger the transition.




|    | node_name           | generators   | transitions                        | is_current   |
|---:|:--------------------|:-------------|:-----------------------------------|:-------------|
|  0 | CenterOfSearchSpace | nan          | -> Sobol: AutoTransitionAfterGen   | False        |
|  1 | Sobol               | Sobol        | -> MBM: MinTrials(5), MinTrials(2) | False        |
|  2 | MBM                 | BoTorch      | nan                                | True         |

## Conclusion

This tutorial demonstrates how to use Ax's `Client` for ask-tell optimization of Python
functions using the Hartmann6 function as an example. You can adjust the function and
parameters to suit your specific optimization problem.

